icons and navbar overlap fix

--- a/layouts/css/page-modules/_header.scss
+++ b/layouts/css/page-modules/_header.scss
@@ -29,22 +29,25 @@ header {
     }
   }
 
-  .dark-theme-switcher {
+  .switchers {
+    display: flex;
+    align-items: center;
     position: absolute;
-    right: 50px;
-    bottom: 17px;
+    right: 0;
+    bottom: 0;
+  }
+
+  .dark-theme-switcher {
     background-color: transparent;
     border: none;
     color: $light-gray2;
     cursor: pointer;
     padding: 12px;
     background-image: url("/static/images/dark-mode.svg");
+    background-repeat: no-repeat;
   }
 
   .lang-picker-toggler {
-    position: absolute;
-    right: 0;
-    bottom: 0;
     background-color: transparent;
     border: none;
     color: $light-gray2;
@@ -96,6 +99,25 @@ header {
   }
 }
 
+@media screen and (max-width: 1024px) and (min-width: 880px), screen and (max-width: 584px) {
+  header {
+    .switchers {
+      position: unset;
+      justify-content: center;
+      margin-bottom: 16px;
+    }
+
+    .lang-picker {
+      li {
+        width: 50%;
+        float: left;
+        padding: 0;
+        margin: 0;
+      }
+    }
+  }
+}
+
 @media screen and (min-width: 481px) {
   header {
     li {
@@ -132,6 +154,10 @@ header {
 
 @media screen and (max-width: 480px) {
   header {
+    .switchers {
+      justify-content: space-evenly;
+    }
+
     li {
       width: 50%;
       float: left;
